[gd_scene load_steps=2 format=3 uid="uid://h8tsu7but004"]

[ext_resource type="Script" path="res://ComboCard/combo_card.gd" id="1_rnpoh"]

[node name="ComboCard" type="Node2D"]
script = ExtResource("1_rnpoh")

[node name="Background" type="Panel" parent="."]
offset_right = 163.0
offset_bottom = 153.0

[node name="NameLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Test Kombo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -45.5
offset_right = 1.0
offset_bottom = -22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Kombo description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
